     and Hooks. All help topics are now dumped into text format in the
     doc/en/user-reference directory for those who like browsing that
     information in their editor. (Ian Clatworthy)

  INTERNALS:

    * find_* methods available for BzrDirs, Branches and WorkingTrees.
      (Aaron Bentley)

    * Help topics can now be loaded from files. 
      (Ian Clatworthy, Alexander Belchenko)

    * Parent Providers should now implement ``get_parent_map`` returning a
      dictionary instead of ``get_parents`` returning a list.
      ``get_parents`` is now considered deprecated.  (John Arbash Meinel)

    * Patience Diff now supports arbitrary python objects, as long as they
      support ``hash()``. (John Arbash Meinel)

  API BREAKS:

  TESTING:

   * Modules can now customise their tests by defining a ``load_tests``
     attribute. ``pydoc bzrlib.tests.TestUtil.TestLoader.loadTestsFromModule``
     for the documentation on this attribute. (Robert Collins)

   * New helper function ``bzrlib.tests.condition_id_re`` which helps
     filter tests based on a regular expression search on the tests id.
     (Robert Collins)
    
   * New helper function ``bzrlib.tests.condition_isinstance`` which helps
     filter tests based on class. (Robert Collins)
    
   * New helper function ``bzrlib.tests.exclude_suite_by_condition`` which
     generalises the ``exclude_suite_by_re`` function. (Robert Collins)

   * New helper function ``bzrlib.tests.filter_suite_by_condition`` which
     generalises the ``filter_suite_by_re`` function. (Robert Collins)

   * New helper method ``bzrlib.tests.exclude_tests_by_re`` which gives a new
     TestSuite that does not contain tests from the input that matched a
     regular expression. (Robert Collins)

   * New helper method ``bzrlib.tests.randomize_suite`` which returns a
     randomized copy of the input suite. (Robert Collins)

   * New helper method ``bzrlib.tests.split_suite_by_re`` which splits a test